--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^9.2.0",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.5.1",
+    "react-select": "^5.10.1",
     "redux-persist": "^6.0.0",
     "yup": "^1.6.1"
   },
