--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.7.0",
     "axios": "^1.8.4",
     "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
     "modern-normalize": "^3.0.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
