--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@reduxjs/toolkit": "^2.7.0",
     "axios": "^1.8.4",
     "clsx": "^2.1.1",
+    "formik": "^2.4.6",
+    "json-server": "^1.0.0-beta.3",
     "modern-normalize": "^3.0.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
@@ -21,6 +24,7 @@
     "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-password-strength-bar": "^0.4.1",
     "react-password-strength-bar-with-style-item": "^0.5.3",
     "react-redux": "^9.2.0",
     "react-responsive": "^10.0.1",
@@ -38,6 +42,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "prettier": "^3.5.3",
     "vite": "^6.3.1"
   }
 }
