--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "react-router-dom": "^7.5.1",
     "react-select": "^5.10.1",
     "redux-persist": "^6.0.0",
+    "sharp": "^0.34.1",
+    "svgo": "^3.3.2",
+    "vite-plugin-image-optimizer": "^1.1.8",
     "yup": "^1.6.1"
   },
   "devDependencies": {
