--- a/package.json
+++ b/package.json
@@ -10,29 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^5.0.1",
-    "@mui/material": "^7.0.2",
     "@reduxjs/toolkit": "^2.7.0",
     "axios": "^1.8.4",
     "clsx": "^2.1.1",
-    "dotenv": "^16.5.0",
     "modern-normalize": "^3.0.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.56.0",
+    "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "react-modal": "^3.16.3",
     "react-password-strength-bar-with-style-item": "^0.5.3",
     "react-redux": "^9.2.0",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.5.1",
     "react-select": "^5.10.1",
     "redux-persist": "^6.0.0",
+    "sharp": "^0.34.1",
+    "svgo": "^3.3.2",
+    "vite-plugin-image-optimizer": "^1.1.8",
     "yup": "^1.6.1"
   },
   "devDependencies": {
