--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.7.0",
     "axios": "^1.8.4",
+    "chart.js": "^4.4.9",
     "clsx": "^2.1.1",
     "modern-normalize": "^3.0.1",
     "react": "^19.0.0",
